feat: implemented search method with specification